# hera_sim

./: .coveragerc  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pre-commit-config.yml  .pyproject.toml  .readthedocs.yml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE.rst  MANIFEST.in  README.md  README.rst  RFI_Script  accuracy_comparison.ipynb  config.yaml  coverage.xml  dontusethis.MANIFEST.in  environment.yml  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_dev_conda.txt  setup.cfg  setup.py  temporary.diffuse_foreground.uvh5  temporary.pntsrc_foreground.uvh5  tmp.csv  travis-environment.yml
.github/: dependabot.yml  labels.yml  release-drafter.yml
.github/workflows/: check-build.yml  pre_commit.yaml  publish-to-pypi.yaml  publish.yaml  release-draft.yml  run-docs-code.yaml  test_suite.yaml
ci/: tests.yaml
config_examples/: simulator.yaml  template_config.yaml
docs/: Makefile  conf.py  environment.yaml  index.rst  installation.rst  notes_for_developers.rst  requirements.txt  requirements_deps.txt  tutorials.rst
docs/_templates/: class.rst
docs/reference/: hera_sim.rst  index.rst
docs/tutorials/: beams.py  end_to_end_example.ipynb  hera_sim_cli.rst  hera_sim_defaults.ipynb  hera_sim_simulator.ipynb  hera_sim_tour.ipynb  hera_sim_vis_cli.rst  mutual_coupling_example.ipynb  polybeam_perturb_simulation.ipynb  polybeam_simulation.ipynb  using_healvis.ipynb  visibility_simulator.ipynb
docs/tutorials/data/: antenna_positions_37.txt  example_antpos_uvsim.csv  example_telescope_uvsim.yaml  obsparam_example.yaml
docs/tutorials/end_to_end/: make_mock_catalog.py  obsparams.yaml
hera_sim/: __init__.py  __yaml_constructors.py  adjustment.py  antpos.py  aug_02_19.txt  beams.py  cli.py  cli_utils.py  components.py  defaults.py  eor.py  foregrounds.py  healvis.npy  healvis2.npy  healvis3.npy  hera_season.py  hera_sim_simulator.ipynb  interpolators.py  io.py  noise.py  print_along_time.py  prisim.npy  prisim2.npy  prisim3.npy  prisim_roi_file.fits  reflections.py  rfi.py  sigchain.py  simulate.py  utils.py  version.py  vis.py  viscpu.npy  viscpu2.npy  viscpu3.npy  yaml_constructors.py
hera_sim.egg-info/: PKG-INFO  SOURCES.txt
hera_sim/config/: H2C.yaml  HERA_H1C_CONFIG.yaml  HERA_H1C_config.yaml  HERA_H2C_CONFIG.yaml  HERA_H2C_config.yaml  __init__.py
hera_sim/data/: H37_FR_Filters_small.npz  HERA_H1C_REFLECTIONS.npz  HERA_H4C_BEAM_INTEGRALS.npz  HERA_Tsky_vs_LST.npz  bad_test_file.yaml
hera_sim/data/tests/: bad_tsky_name.npz  no_freqs.npz  no_lsts.npz  no_meta.npz  test_sim_file.yaml
hera_sim/h1c/: __init__.py  eor.py  noise.py  sigchain.py  version.py  vis.py
hera_sim/h1c/data/: HERA_H1C_IO_PARAMS.npz
hera_sim/h1c/tests/: test_io.py  test_noise.py  test_sigchain.py  test_simulator.py  test_utils.py  test_vis.py
hera_sim/h2c/: __init__.py  antpos.py  io.py  noise.py  rfi.py  sigchain.py
hera_sim/h2c/data/: HERA_H2C_BEAM_MODELS.npz
hera_sim/h2c/parameter_files/: HERA_H2C_BEAM_POLY.npy  HERA_H2C_RFI_STATIONS.npz
hera_sim/h2c/tests/: test_noise.py  test_sigchain.py
hera_sim/scripts/: mkgains Documentation.ipynb  mkgains.py
hera_sim/skies/: __init__.py
hera_sim/tests/: .coverage  conftest.py  prisim_roi_file.fits  test_adjustment.py  test_antpos.py  test_beams.py  test_cli.py  test_cli_utils.py  test_compare_pyuvsim.py  test_components.py  test_defaults.py  test_eor.py  test_foregrounds.py  test_gpu.py  test_hera_season.py  test_interpolators.py  test_io.py  test_noise.py  test_polybeam.py  test_prisim.py  test_reflections.py  test_rfi.py  test_sigchain.py  test_sim_file.yaml  test_sim_red_data.py  test_simulate_cli.py  test_simulator.py  test_utils.py  test_vis.py  test_vis_cli.py  test_yaml_constructors.py  test_zernikebeam.py
hera_sim/tests/test_visibilities/: conftest.py  test_compare_pyuvsim.py  test_fftvis.py  test_matvis.py  test_model_data.py  test_vis.py  test_vis_cli.py
hera_sim/tests/testdata/: healvis_catalog.txt
hera_sim/v1_modules/: .eor.py.swp  .simulate.py.swp  __init__.py  __yaml_constructors.py  antpos.py  components.py  defaults.py  eor.py  foregrounds.py  interpolators.py  io.py  noise.py  rfi.py  sigchain.py  simulate.py  utils.py  vis.py
hera_sim/v1_modules/config/: H1C.yaml
hera_sim/v1_modules/data/: HERA_H1C_RFI_STATIONS.npy
hera_sim/v1_modules/tests/: test_defaults.py  test_interpolators.py  test_noise.py  test_simulator.py
hera_sim/visibilities/: __init__.py  cli.py  conversions.py  fftvis.py  healvis.py  healvis_wrapper.py  matvis.py  prisim_wrapper.py  pyuvsim_wrapper.py  rimez_wrapper.py  simulators.py  vis_cpu.py  vis_gpu.py
pip-wheel-metadata/hera_sim.dist-info/: METADATA  entry_points.txt  top_level.txt
scripts/: hera-sim-simulate.py  hera-sim-vis.py  simulate.py  simulation.py  template_config.yaml  template_config_old.yaml
src/hera_sim/: __init__.py  __yaml_constructors.py  adjustment.py  antpos.py  beams.py  cli_utils.py  components.py  defaults.py  eor.py  foregrounds.py  interpolators.py  io.py  noise.py  rfi.py  sigchain.py  simulate.py  utils.py  vis.py
src/hera_sim/config/: H1C.yaml  debug.yaml
src/hera_sim/data/: HERA_H1C_BANDPASS.npy  HERA_H1C_BEAM_INTEGRALS.npz  HERA_H1C_BEAM_POLY.npy  HERA_H2C_BANDPASS.npy  HERA_H2C_BEAM_MODEL.npz  HERA_H2C_RFI_STATIONS.npy  HERA_H4C_BANDPASS.npz  HERA_H4C_REFLECTIONS.npz  HERA_LAT_LON_ALT.npy  HERA_Tsky_Reformatted.npz
src/hera_sim/tests/: conftest.py  test_adjustment.py  test_defaults.py  test_eor.py  test_foregrounds.py  test_interpolators.py  test_io.py  test_noise.py  test_sigchain.py  test_utils.py
src/hera_sim/visibilities/: __init__.py  cli.py  fftvis.py  (+3 more)
tests/: conftest.py  test_adjustment.py  test_antpos.py  test_beams.py  test_cli_utils.py  test_components.py  test_interpolators.py  test_io.py  test_noise.py  test_rfi.py  test_sigchain.py  test_sim_red_data.py  test_simulate_cli.py  test_simulator.py  test_utils.py  test_yaml_constructors.py
tests/test_visibilities/: test_compare_pyuvsim.py  test_fftvis.py  test_matvis.py  test_model_data.py  test_vis.py  test_vis_cli.py
(+27 files in other folders)
