# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = hera_sim
description = A collection of simulation routines describing the HERA instrument.
author = HERA Team
author_email = steven.g.murray@asu.edu
license = BSD
long_description = file: README.md
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/HERA-Team/hera_sim
project_urls =
    Documentation = https://hera_sim.readthedocs.org
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Intended Audience :: Science/Research
    License :: OSI Approved
    Natural Language :: English
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Astronomy

[options]
zip_safe = False
packages = find:
include_package_data = True
scripts =
    scripts/hera-sim-simulate.py
    scripts/hera-sim-vis.py

install_requires =
    numpy>=1.14
    scipy
    cached_property
    pyuvsim>=1.1.2
    pyuvdata
    astropy_healpix
    astropy
    deprecation
    pyyaml>=5.1
    rich

[options.packages.find]
exclude =
    tests

[options.extras_require]
bda =
    bda
gpu =
    pycuda
    scikit-cuda
cal =
    hera-calibration
docs =
    sphinx>=1.8
    nbsphinx
    ipython
    sphinx_autorun
    numpydoc>=0.8
    nbsphinx
    vis_cpu>=0.4.1
    pyradiosky>=0.1.2
tests =
    coverage>=4.5.1
    pytest>=3.5.1
    pytest-cov>=2.5.1
    pre-commit
    matplotlib>=3.4.2
    uvtools
    hera-calibration
    bda
    vis_cpu>=0.4.1
dev =
    sphinx>=1.8
    numpydoc>=0.8.0
    nbsphinx
    ipython
    coverage>=4.5.1
    pytest>=3.5.1
    pytest-cov>=2.5.1
    pre-commit
    uvtools
    hera-calibration
    bda
    vis_cpu>=0.4.1
vis =
    vis_cpu>=0.4.1
    pyradiosky>=0.1.2
    mpi4py

[tool:pytest]
# Options for py.test:
# Specify command line options as you would do when invoking py.test directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
addopts =
    --cov hera_sim
    --cov-config=.coveragerc
    --cov-report xml:./coverage.xml
    --durations=25
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = hera_sim/tests

[aliases]
dists = bdist_wheel

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx
