[metadata]
name = hera_sim
description = A collection of simulation routines describing the HERA instrument.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/HERA-Team/hera_sim
author = HERA Team
author_email = steven.g.murray@asu.edu
license = MIT
license_files = LICENSE.rst
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics
project_urls =
    Documentation = https://hera_sim.readthedocs.org

[options]
packages = find:
install_requires =
    astropy
    astropy-healpix
    cached-property
    deprecation
    hera-cli-utils>=0.1.0
    numpy>=1.18
    pyuvdata>=3.1.2
    pyuvsim>=1.4
    pyyaml>=5.1
    rich
    scipy
    typing-extensions;python_version<'3.11'
python_requires = >=3.10
include_package_data = True
scripts =
    scripts/hera-sim-simulate.py
    scripts/hera-sim-vis.py
zip_safe = False

[options.packages.find]
exclude =
    tests

[options.extras_require]
all =
    hera-sim[vis,bda,cal,gpu]
bda =
    bda
cal =
    hera-calibration>=3.6.1
dev =
    hera-sim[docs,tests]
docs =
    fftvis
    furo
    ipython
    matvis>=1.3.0
    nbsphinx
    numpydoc>=0.8
    pyradiosky>=0.1.2
    sphinx>=1.8,<7.2
    sphinx-autorun
gpu =
    pycuda
    scikit-cuda
tests =
    coverage>=4.5.1
    hera-sim[bda,cal,vis]
    matplotlib>=3.4.2
    pre-commit
    pytest>=3.5.1
    pytest-cov>=2.5.1
    uvtools
vis =
    fftvis>=0.1.0
    line-profiler
    matvis>=1.2.1
    mpi4py
    pyradiosky>=0.1.2

[tool:pytest]
addopts =
    --cov hera_sim
    --cov-config=.coveragerc
    --cov-report xml:./coverage.xml
    --durations=25
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = hera_sim/tests

[aliases]
dists = bdist_wheel

[bdist_wheel]
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx
